# warehouse

./: .env.example  Dockerfile  LICENSE  README.md  alembic.ini  data.json  docker-compose.yml  pyproject.toml  setup.cfg
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/api/endpoints/: roll.py
app/models/: roll.py
app/models/manufacturers/: repositories.py  shemas.py  views.py
app/models/product_categories/: models.py  repositories.py  shemas.py  views.py
app/models/product_feature_association/: repositories.py
app/models/product_features/: models.py  repositories.py  shemas.py  views.py
app/models/products/: models.py  repositories.py  shemas.py  views.py
app/models/shipments/: models.py  repositories.py  shemas.py  views.py
app/models/stock/: models.py  repositories.py  shemas.py  views.py
app/pages/: router.py
app/repositories/: base.py  interfaces.py  postgresql.py  roll_repositories.py
app/schemas/: roll.py
app/service/: roll_service.py
app/templates/: base.html  categories.html  counts.html  manufacturers.html  product_features.html  products.html  shipments.html  stock.html
migration/versions/: 494dc1c716f9_update_pk.py
migrations/: env.py
migrations/versions/: 20250311_1816_init_role_model.py  20250312_1154_create_roll_model.py
test/: conftest.py
test/integration/: test_api.py
test/unit/: test_postgresql_storage.py  test_repositories.py  test_services.py
