[tool.poetry]
name = "warehouse"
version = "0.1.0"
description = ""
authors = ["Nikita <nikitooo111333222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.11"}
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
